--- a/index.html
+++ b/index.html
@@ -3,60 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brez Marketing</title>
+    <title>Your Service Name</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="logo">
-                <a href="#">Brez Marketing</a>
-            </div>
+            <h1>Your Service Name</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section class="hero">
+    <section id="hero">
         <div class="container">
-            <h1>We Drive Growth for Your Business</h1>
-            <p>Your success is our mission. Let us help you grow.</p>
-            <a href="#" class="btn">Get Started</a>
-        </div>
-    </section>
-
-    <section class="services">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="service-list">
-                <div class="service-item">
-                    <h3>Digital Marketing</h3>
-                    <p>We create strategies that drive results.</p>
-                </div>
-                <div class="service-item">
-                    <h3>SEO Optimization</h3>
-                    <p>Improve your search engine rankings.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Social Media Management</h3>
-                    <p>Engage your audience on social platforms.</p>
-                </div>
+            <h2>Welcome to Your Service Name</h2>
+            <p>We provide the best services for your needs.</p>
+            <div class="cta-buttons">
+                <a href="#schedule-call" class="btn btn-primary">Schedule a Call</a>
+                <a href="https://instagram.com/yourusername" class="btn btn-secondary">Message on Instagram</a>
             </div>
         </div>
     </section>
 
-    <footer>
+    <section id="about">
         <div class="container">
-            <p>&copy; 2023 Brez Marketing. All rights reserved.</p>
+            <h2>Why Choose Me?</h2>
+            <ul class="why-choose-me">
+                <li><span class="circle"></span>Professional Experience</li>
+                <li><span class="circle"></span>Creative Solutions</li>
+                <li><span class="circle"></span>Client-Oriented Approach</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="portfolio">
+        <div class="container">
+            <h2>Portfolio</h2>
+            <div class="portfolio-grid">
+                <div class="portfolio-item">
+                    <img src="work1.jpg" alt="Work 1">
+                </div>
+                <div class="portfolio-item">
+                    <img src="work2.jpg" alt="Work 2">
+                </div>
+                <!-- Add more items as needed -->
+            </div>
+        </div>
+    </section>
+
+    <section id="testimonials">
+        <div class="container">
+            <h2>Success Stories</h2>
+            <div class="testimonial">
+                <img src="success1.jpg" alt="Success Story 1">
+                <p>This is the first success story. It was amazing working with me!</p>
+            </div>
+            <div class="testimonial">
+                <p>This is the second success story. Another great experience!</p>
+                <img src="success2.jpg" alt="Success Story 2">
+            </div>
+        </div>
+    </section>
+
+    <footer id="contact">
+        <div class="container">
+            <p>&copy; 2023 Your Service Name. All rights reserved.</p>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
