--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="success-stories">
         <h2>Success Stories</h2>
         <div class="story">
-            <img src="image1.jpeg" alt="Success Story 1">
+            <img src="images/image1.jpeg" alt="Success Story 1">
             <div class="story-text">
                 <p>3x sales growth in just one month!</p>
             </div>
@@ -155,7 +155,7 @@
             <div class="story-text">
                 <p>increased engagement by 200% in 3 weeks!</p>
             </div>
-            <img src="image2.jpg" alt="Success Story 2">
+            <img src="images/image2.jpg" alt="Success Story 2">
         </div>
     </div>
 </body>
