--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 <body>
     <div class="container">
         <h1>Grow Your Brand with Us</h1>
-        <a href="https://calendly.com/yourbooking" class="btn blue" target="_blank">Book a Free Call</a>
-        <a href="https://instagram.com/youraccount" class="btn pink" target="_blank">Visit Instagram</a>
+        <a href="https://calendly.com/velbroscales/30min" class="btn blue" target="_blank">Book a Free Call</a>
+        <a href="https://instagram.com/velbroscales" class="btn pink" target="_blank">Visit Instagram</a>
     </div>
     
     <div class="section-text">We help businesses scale fast with high-converting ad strategies.</div>
